@@ -2,6 +2,7 @@
 
 - Fixes switching to Queue doesn't have focus on song list for keyboard navigation
 - Fixes missing icons in breeze icon theme
+- Better handling of missing songs in playlists
 
 # 5.2
 
